apps/demo-app/overlays/k3s-dev/patch-deployment-secret-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
spec:
  template:
    spec:
      containers:
        - name: demo-app
